# DeepGroundwater.github.io

./: .gitignore  CNAME  README.md  mkdocs.yml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: Blog_post_template.md
.github/workflows/: ci.yaml
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: agu_2024_review.md  aihydro.md  alphaearth_embeddings.md  buckets_as_conceptual_hydr.md  helloworld.md  nwm_virtualizarr.md  soil_animation_pt1.md
docs/home/: contributions.md
docs/js/: mathjax-config.js
docs/roadmap/: index.md
hooks/: socialmedia.py
